cmake_minimum_required(VERSION 2.6)

project (testapi CXX)

set(TESTAPI_HEADERS testApi.h)

set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(TESTAPI_CODEGEN_DIR "${PROJECT_BINARY_DIR}/codegen")

PREPEND(TESTAPI_HEADERS_PATHS ${PROJECT_SOURCE_DIR} ${TESTAPI_HEADERS})

CODEGEN_FILES(TESTAPI_CODEGEN_SOURCES ${TESTAPI_CODEGEN_DIR} ${TESTAPI_HEADERS})

add_custom_command(OUTPUT ${TESTAPI_CODEGEN_SOURCES}
    COMMAND ${NGREST_BIN_PATH}ngrestcg -i "${PROJECT_SOURCE_DIR}" -o ${TESTAPI_CODEGEN_DIR} -t service ${TESTAPI_HEADERS}
    DEPENDS ${TESTAPI_HEADERS_PATHS}
)

file(GLOB TESTAPI_SOURCES ${PROJECT_SOURCE_DIR}/*.cpp)

list(APPEND TESTAPI_SOURCES ${TESTAPI_CODEGEN_SOURCES})

include_directories(${PROJECT_SOURCE_DIR} $ENV{NGREST_EXT_INCLUDES})

add_library(testapi MODULE ${TESTAPI_SOURCES})

set_target_properties(testapi PROPERTIES PREFIX "")
set_target_properties(testapi PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SERVICES_DIR}"
)

target_link_libraries(testapi ngrestutils ngrestcommon ngrestjson ngrestengine $ENV{NGREST_EXT_LIBS})
